media/css/cms/flare26-template.css
/*
* This Source Code Form is subject to the terms of the Mozilla Public
* License, v. 2.0. If a copy of the MPL was not distributed with this
* file, You can obtain one at https://mozilla.org/MPL/2.0/.
*/

/* =====================================================================
Template - Layout styles for header, footer, and page structure

This file contains template-level styles for the Flare 2026 design.
===================================================================== */

body {
    background: var(--fl-theme-body-background);
    color: var(--fl-theme-color-text);
}

body.fl-modal-open {
    height: 100vh;
    overflow-y: hidden;
    position: fixed;
}

/* Main */

.fl-main {
    background: var(--fl-theme-background);
    border-end-end-radius: var(--fl-theme-main-border-radius);
    border-end-start-radius: var(--fl-theme-main-border-radius);
    margin: 0 auto;
    padding-block: 0 var(--fl-theme-main-border-radius);
}

.fl-split-page-upper,
.fl-split-page-lower {
    margin: 0;
}

.fl-split-page-upper {
    --section-border-radius: var(--token-border-radius-lg);
    --fl-theme-color-text: var(--token-color-white);
    --fl-theme-color-link: var(--token-color-soft-purple-4);
    --fl-theme-color-link-hover: var(--token-color-nav-icon-purple);
    background: var(--token-color-dark-purple);
    border-bottom-left-radius: var(--section-border-radius);
    border-bottom-right-radius: var(--section-border-radius);
    color: var(--fl-theme-color-text);
    padding-block: var(--fl-section-v-padding);
    position: relative;
    width: 100%;
}

.fl-split-page-lower {
    background-color: var(--fl-theme-background);
    color: var(--fl-theme-color-text);
    display: flex;
    flex-direction: column;
    gap: var(--fl-section-v-padding);
    padding-top: var(--fl-section-v-padding);
    position: relative;
}

.fl-split-page-upper > *,
.fl-split-page-lower > * {
    position: relative;
    z-index: 1;
}

.has-gradient-top::before {
    --gradient-height: 44vh;
    background-image: radial-gradient(
        var(--token-color-light-purple) 0%,
        var(--token-color-dark-purple) 50%
    );
    content: var(--content-dark-mode-only);
    filter: blur(200px);
    height: var(--gradient-height);
    inset: calc(var(--gradient-height) / -2) -30vw auto;
    position: absolute;
    z-index: 0;
}

.has-gradient-bottom::before {
    --gradient-height: 60vh;
    background-image: radial-gradient(
        var(--token-color-light-purple) 0%,
        var(--token-color-dark-purple) 50%
    );
    content: var(--content-dark-mode-only);
    filter: blur(200px);
    height: var(--gradient-height);
    inset: auto -40vw calc(var(--gradient-height) / -2);
    position: absolute;
    z-index: 0;
}

